2000-11-17  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/nnheader.el (nnheader-header-value): Save point.

2000-11-16  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* texi/gnus-ja.texi (Drafts): Fix typo.

2000-11-14  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (article-verify-x-pgp-sig): Autoload "mm-uu".
	(gnus-treat-x-pgp-sig): Default to nil.

2000-11-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* Mule23@1934.en, Mule23@1934.ja, sample.lpath.el: Upgrade.

	* configure: Regenerate.
	* aclocal.m4 (AC_PATH_PACKAGEDIR): No need to quote a string for
	`AC_MSG_RESULT'.
	(AC_CHECK_W3): Ignore cache; no need to quote a string for
	`AC_MSG_RESULT'.
	(AC_CHECK_EMACS_FLAVOR): Ignore cache.
	(AC_CHECK_EMACS): Ignore cache.
	(AC_DEFINE_GNUS_PRODUCT_NAME): Cache.

2000-11-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* configure: Regenerate.

	* aclocal.m4 (AC_CHECK_W3): Substitute `W3' with empty string
	instead of "no" if it is not acceptable.

	* lisp/dgnushack.el: Load dgnuspath.el and ~/.lpath.el just before
	path-util is loaded.
	(dgnushack-compile): Show `load-path'.
	(dgnushack-w3-dir): Ignore the env var W3DIR if it is empty.

	* lisp/lpath.el: Move out `load-path' modification for APEL, FLIM
	and SEMI to dgnushack.el.
	* lisp/dgnushack.el: Move here.

	* lisp/lpath.el (md5): Don't bind.
	(url-insert-file-contents): Fbind for FSF Emacsen.

2000-11-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* texi/Makefile.in (install-ja-info): Specify `EMACS' and
	`infodir'.
	(install-info): Ditto.
	(install-ja): Ditto.

	* lisp/lpath.el (md5): Fbind using `maybe-fbind'.

	* lisp/dgnushack.el (dgnushack-compose-package): Remove function.
	(dgnushack-install-package-info-ja): Remove function.
	(dgnushack-install-package-info): Remove function.
	(dgnushack-install-package-lick): Remove function.
	(dgnushack-install-package-pkginfo): Remove function.
	(dgnushack-install-package-info-files): Remove function.
	(dgnushack-install-package-manifest): New function.