@@ -1,3 +1,7 @@
+2000-11-20 18:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* gnus-ml.el (gnus-mailing-list-archive): Use browse-url.
+
 2000-11-20 17:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* gnus-art.el (gnus-article-make-menu-bar): Use easy-menu-add.
