@@ -1,3 +1,11 @@
+2000-11-21  Katsumi Yamaoka <yamaoka@jpl.org>
+
+	* lisp/message.el (message-send-mail-with-smtp): Use
+	`smtp-send-buffer' if it exists instead of `smtp-via-smtp'.
+
+	* lisp/dgnushack.el (describe-key-briefly): New compiler macro for
+	old Emacsen.
+
 2000-11-17  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>
 
 	* lisp/nnheader.el (nnheader-header-value): Save point.
